--- a/doc/http-server.1
+++ b/doc/http-server.1
@@ -63,6 +63,10 @@ Enable CORS via the "Access-Control-Allow-Origin" header.
 Optionally provide CORS headers list separated by commas.
 
 .TP
+.BI \-H ", " \-\-header " " \fIHEADER\fR
+Add extra header to all responses, eg. "X-Frame-Options: DENY".
+
+.TP
 .BI \-o " " [\fIPATH\fR]
 Open default browser window after starting the server.
 Optionally provide a URL path to open the browser window to.
